# ai-open-studio

autolearn/cmd/autolearn-apiserver/: BUILD.bazel  Dockerfile  conf.yaml  main.go  server.go
autolearn/cmd/internal-agent/: BUILD.bazel  main.go  server.go
autolearn/cmd/recommend-server/: BUILD.bazel  Dockerfile  main.go
autolearn/pkg/autolearn-server/api/: BUILD.bazel
autolearn/pkg/autolearn-server/api/v1/: BUILD.bazel  route.go
autolearn/pkg/autolearn-server/api/v1/client/: BUILD.bazel  client.go
autolearn/pkg/autolearn-server/config/: BUILD.bazel  config.go  consts.go
autolearn/pkg/autolearn-server/ctx/: BUILD.bazel  response.go
autolearn/pkg/autolearn-server/ctx/errors/: BUILD.bazel  errors.go
autolearn/pkg/autolearn-server/mgr/dao/: BUILD.bazel  algorithm.go  autolearn.go  dao.go  evaluation.go  evaluation_comparison.go  operation.go  revision.go
autolearn/pkg/autolearn-server/outer-client/: BUILD.bazel  codehub.go  evalhub.go  fakeDatahub.go  recommend.go  sampler.go
autolearn/pkg/autolearn-server/types/: BUILD.bazel  request.go  response.go  state.go  types.go
autolearn/pkg/autolearn-server/utils/: BUILD.bazel  utils.go
autolearn/pkg/internal-agent/handler/: BUILD.bazel  init_worker.go  worker.go
autolearn/pkg/internal-agent/oss/: BUILD.bazel  config.go  oss.go
autolearn/pkg/internal-agent/thread/: BUILD.bazel  autolearn.go
autolearn/pkg/recommend-server/api/: BUILD.bazel  server.go
autolearn/pkg/recommend-server/types/: BUILD.bazel  sampler.go  types.go
autolearn/pkg/utils/: BUILD.bazel  common.go  constant.go  metriclog.go  request.go  ticker_wrapper.go  zip.go
inference/: BUILD.bazel
inference/cmd/inference-server/: BUILD.bazel  Dockerfile  conf.yaml  main.go  server.go
inference/pkg/api/v1/: BUILD.bazel  api.yaml  route.go
inference/pkg/mgr/: BUILD.bazel  common.go  conversation.go  dao.go  errors.go  infer.go  inferenceservice.go  kserve.go  metrics.go  mgr.go  pods.go  revision.go  utils.go
inference/pkg/types/: BUILD.bazel  consts.go  inference.go  request.go  response.go
inference/pkg/utils/ctx/: BUILD.bazel  response.go
inference/pkg/utils/ctx/errors/: BUILD.bazel  errors.go
resourcesense/cmd/resourcesense-apiserver/: BUILD.bazel  Dockerfile  main.go
resourcesense/hack/: rs.yaml
resourcesense/pkg/: BUILD.bazel  client.go
resourcesense/pkg/api/v1/algoresource/: BUILD.bazel  algoresource.go
resourcesense/pkg/api/v1/quota/: BUILD.bazel  quota.go  resourcesense.go
resourcesense/pkg/api/v1/resource/: BUILD.bazel  resource.go
resourcesense/pkg/api/v1/site/: BUILD.bazel  site.go
resourcesense/pkg/consts/: BUILD.bazel  consts.go  types.go
resourcesense/pkg/controller/algoresource/: BUILD.bazel  algoresource.go
resourcesense/pkg/controller/quota/: BUILD.bazel  check_quota.go  controller_manager.go  events.go  helper.go  lister.go  prometheus.go  quota.go  reconcile.go  resourcesense.go  scheme.go  syncers.go  tenant.go  user.go  webhook.go
resourcesense/pkg/controller/quota/datasetstorage/: BUILD.bazel  manager.go
resourcesense/pkg/controller/resource/: BUILD.bazel  audit.go  bill.go  controller.go  node.go  nodemonitor.go  resource.go  storage.go
resourcesense/pkg/controller/site/: BUILD.bazel  communication.go  proxy_client.go  site.go
resourcesense/pkg/initial/: BUILD.bazel  client.go  config.go  database.go  log.go  oss.go  quota.go  route.go
resourcesense/pkg/logic/quota/: BUILD.bazel  datasetstorage.go  quota.go
resourcesense/pkg/types/: BUILD.bazel  gpu.go  types.go
resourcesense/pkg/types/algoresource/: BUILD.bazel  algoresource.go
resourcesense/pkg/types/ctx/: BUILD.bazel  response.go
resourcesense/pkg/types/ctx/errors/: BUILD.bazel  errors.go
resourcesense/pkg/types/quota/: BUILD.bazel  const.go  quota.go  request.go  response.go  types.go
resourcesense/pkg/types/resource/: BUILD.bazel  audit.go  bill.go  node.go  prometheus.go  resource.go
resourcesense/pkg/types/site/: BUILD.bazel  types.go
resourcesense/pkg/utils/: BUILD.bazel  client.go  etcd_lock.go
resourcesense/pkg/utils/resource/: BUILD.bazel  dataselect.go
workspace/cmd/apiserver/: BUILD.bazel  main.go
workspace/cmd/sshproxy/: BUILD.bazel  forward.go  forward_channel.go  forward_request.go  forward_ssh.go  grace.go  idle.go  listener.go  main.go
workspace/hack/: workspace.yaml
workspace/jupyterlab/: Dockerfile  README.md  build.sh  condarc  init.py  pip.brain.conf  pip.conf  resource.py
workspace/jupyterlab/convert-sds/: convert_to_coco.py  convert_to_imagenet.py  convert_to_voc.py  convert_to_yolo.py
workspace/jupyterlab/jupyter/: jupyter_notebook_config.py
workspace/jupyterlab/jupyter3/: jupyter_notebook_config.py
workspace/jupyterlab/megzilla/: README.md  package.json  tsconfig.json
workspace/jupyterlab/megzilla/schema/: brain.json
workspace/jupyterlab/megzilla/src/: heartbeat.ts  index.ts  resource.ts  settings.ts
workspace/jupyterlab/megzilla/style/: index.css
workspace/jupyterlab/megzilla_server/: MANIFEST.in  build.sh  setup.py
workspace/jupyterlab/megzilla_server/megzilla_server/: __init__.py
workspace/jupyterlab/ssh/: authorized_keys  authorized_keys.sh  env  profile  sshd_config
workspace/kubevirt/kubevirt-gpu-device-plugin/: README.md
workspace/kubevirt/kubevirt-gpu-device-plugin/v1.1.1/: 0000-common-gpu-device-name-env.patch
workspace/kubevirt/kubevirt-gpu-device-plugin/v1.2.2/: 0000-common-gpu-device-name-env.patch
workspace/middleware/: BUILD.bazel  params.go
workspace/pkg/apis/client/: BUILD.bazel  template.go  workspace.go  workspace_interface.go
workspace/pkg/apis/operator/: BUILD.bazel  Dockerfile  Dockerfile.backup  Makefile  PROJECT  README.md  build.sh  main.go
workspace/pkg/consts/: BUILD.bazel  consts.go  types.go
workspace/pkg/controller/heartbeat/: BUILD.bazel  heartbeat.go
workspace/pkg/initial/: BUILD.bazel  client.go  config.go  database.go  route.go
workspace/pkg/types/ctx/: BUILD.bazel  response.go
workspace/pkg/types/workspace/: BUILD.bazel  instance.go  workspace.go
workspace/pkg/utils/: BUILD.bazel  cipher.go
(+64 files in other folders)
