filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//projects/aiservice/inference/cmd/inference-server:all-srcs",
        "//projects/aiservice/inference/pkg/api/v1:all-srcs",
        "//projects/aiservice/inference/pkg/mgr:all-srcs",
        "//projects/aiservice/inference/pkg/types:all-srcs",
        "//projects/aiservice/inference/pkg/utils/ctx:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
