load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/resourcesense/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/auth/pkg/app/types:go_default_library",
        "//projects/aiservice/pkg/authlib:go_default_library",
        "//projects/aiservice/pkg/ginlib:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/resourcesense/pkg/types/algoresource:go_default_library",
        "//projects/aiservice/resourcesense/pkg/types/quota:go_default_library",
        "//projects/aiservice/resourcesense/pkg/types/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//projects/aiservice/resourcesense/pkg/api/v1/algoresource:all-srcs",
        "//projects/aiservice/resourcesense/pkg/api/v1/quota:all-srcs",
        "//projects/aiservice/resourcesense/pkg/api/v1/resource:all-srcs",
        "//projects/aiservice/resourcesense/pkg/api/v1/site:all-srcs",
        "//projects/aiservice/resourcesense/pkg/consts:all-srcs",
        "//projects/aiservice/resourcesense/pkg/controller/algoresource:all-srcs",
        "//projects/aiservice/resourcesense/pkg/controller/quota:all-srcs",
        "//projects/aiservice/resourcesense/pkg/controller/resource:all-srcs",
        "//projects/aiservice/resourcesense/pkg/controller/site:all-srcs",
        "//projects/aiservice/resourcesense/pkg/initial:all-srcs",
        "//projects/aiservice/resourcesense/pkg/logic/quota:all-srcs",
        "//projects/aiservice/resourcesense/pkg/types:all-srcs",
        "//projects/aiservice/resourcesense/pkg/utils:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
