load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/autolearn/cmd/recommend-server",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/aiservice/autolearn/pkg/recommend-server/api:go_default_library",
        "//projects/aiservice/autolearn/pkg/recommend-server/types:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "recommend-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
