load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/inference/cmd/inference-server",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/aiservice/inference/pkg/api/v1:go_default_library",
        "//projects/aiservice/inference/pkg/mgr:go_default_library",
        "//projects/aiservice/pkg/ginapp:go_default_library",
        "//projects/aiservice/pkg/sentry:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/pkg/utils:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "inference-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
