load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "conversation.go",
        "dao.go",
        "errors.go",
        "infer.go",
        "inferenceservice.go",
        "kserve.go",
        "metrics.go",
        "mgr.go",
        "pods.go",
        "revision.go",
        "utils.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/inference/pkg/mgr",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/inference/pkg/types:go_default_library",
        "//projects/aiservice/inference/pkg/utils/ctx:go_default_library",
        "//projects/aiservice/inference/pkg/utils/ctx/errors:go_default_library",
        "//projects/aiservice/modelhub/pkg/api:go_default_library",
        "//projects/aiservice/modelhub/pkg/types:go_default_library",
        "//projects/aiservice/pkg/auditlib:go_default_library",
        "//projects/aiservice/pkg/cvtmodels:go_default_library",
        "//projects/aiservice/pkg/features:go_default_library",
        "//projects/aiservice/pkg/ginapp:go_default_library",
        "//projects/aiservice/pkg/ginlib:go_default_library",
        "//projects/aiservice/pkg/mgolib:go_default_library",
        "//projects/aiservice/pkg/oss:go_default_library",
        "//projects/aiservice/pkg/quotagroup:go_default_library",
        "//projects/aiservice/pkg/snap:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/pkg/utils:go_default_library",
        "//projects/aiservice/pkg/utils/model:go_default_library",
        "//projects/aiservice/pkg/utils/sds:go_default_library",
        "//projects/aiservice/publicservice/pkg/types:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_kserve_kserve//pkg/apis/serving/v1beta1:go_default_library",
        "@com_github_penglongli_gin_metrics//ginmetrics:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_client_go//dynamic:go_default_library",
        "@io_k8s_client_go//dynamic/dynamicinformer:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/readconcern:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/writeconcern:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
