load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consts.go",
        "inference.go",
        "request.go",
        "response.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/inference/pkg/types",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/modelhub/pkg/types:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/pkg/utils/sds:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
