load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/resourcesense/cmd/resourcesense-apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/aiservice/auth/pkg/api/v1:go_default_library",
        "//projects/aiservice/pkg/features:go_default_library",
        "//projects/aiservice/pkg/sentry:go_default_library",
        "//projects/aiservice/pkg/utils:go_default_library",
        "//projects/aiservice/resourcesense/pkg/consts:go_default_library",
        "//projects/aiservice/resourcesense/pkg/controller/quota:go_default_library",
        "//projects/aiservice/resourcesense/pkg/controller/quota/datasetstorage:go_default_library",
        "//projects/aiservice/resourcesense/pkg/controller/resource:go_default_library",
        "//projects/aiservice/resourcesense/pkg/controller/site:go_default_library",
        "//projects/aiservice/resourcesense/pkg/initial:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_klog_v2//:go_default_library",
    ],
)

go_binary(
    name = "resourcesense-apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
