load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config.go",
        "database.go",
        "log.go",
        "oss.go",
        "quota.go",
        "route.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/resourcesense/pkg/initial",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/datahub/pkg/datahub-apiserver/api/v1:go_default_library",
        "//projects/aiservice/pkg/features:go_default_library",
        "//projects/aiservice/pkg/ginlib:go_default_library",
        "//projects/aiservice/pkg/korok:go_default_library",
        "//projects/aiservice/pkg/kylin:go_default_library",
        "//projects/aiservice/pkg/mgolib:go_default_library",
        "//projects/aiservice/pkg/release:go_default_library",
        "//projects/aiservice/pkg/sentry:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/pkg/utils/etcd:go_default_library",
        "//projects/aiservice/resourcesense/pkg/api/v1/algoresource:go_default_library",
        "//projects/aiservice/resourcesense/pkg/api/v1/quota:go_default_library",
        "//projects/aiservice/resourcesense/pkg/api/v1/resource:go_default_library",
        "//projects/aiservice/resourcesense/pkg/api/v1/site:go_default_library",
        "//projects/aiservice/resourcesense/pkg/consts:go_default_library",
        "//projects/aiservice/resourcesense/pkg/types:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_client_go//informers/core/v1:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
