load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "etcd_lock.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/resourcesense/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/pkg/utils/etcd:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_etcd_go_etcd_client_v3//:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//projects/aiservice/resourcesense/pkg/utils/resource:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
