load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/workspace/cmd/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//common/pkg/log:go_default_library",
        "//projects/aiservice/pkg/sentry:go_default_library",
        "//projects/aiservice/workspace/pkg/consts:go_default_library",
        "//projects/aiservice/workspace/pkg/controller/heartbeat:go_default_library",
        "//projects/aiservice/workspace/pkg/initial:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
