load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "forward.go",
        "forward_channel.go",
        "forward_request.go",
        "forward_ssh.go",
        "grace.go",
        "idle.go",
        "listener.go",
        "main.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/workspace/cmd/sshproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//common/pkg/log:go_default_library",
        "//projects/aiservice/auth/pkg/app/types:go_default_library",
        "//projects/aiservice/workspace/pkg/consts:go_default_library",
        "@com_github_facebookgo_grace//gracenet:go_default_library",
        "@com_github_pires_go_proxyproto//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_binary(
    name = "sshproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
