load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consts.go",
        "types.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/workspace/pkg/consts",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/pkg/authlib:go_default_library",
        "//projects/aiservice/pkg/ginlib:go_default_library",
        "//projects/aiservice/pkg/mgolib:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "//projects/aiservice/workspace/pkg/apis/client:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
