load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/autolearn/pkg/recommend-server/api",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/autolearn/pkg/autolearn-server/types:go_default_library",
        "//projects/aiservice/autolearn/pkg/recommend-server/types:go_default_library",
        "//projects/aiservice/pkg/types:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
