load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "sampler.go",
        "types.go",
    ],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/autolearn/pkg/recommend-server/types",
    visibility = ["//visibility:public"],
    deps = ["//projects/aiservice/autolearn/pkg/autolearn-server/types:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
