load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["route.go"],
    importpath = "go.megvii-inc.com/brain/brainpp/projects/aiservice/inference/pkg/api/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/aiservice/inference/pkg/mgr:go_default_library",
        "//projects/aiservice/pkg/auditlib:go_default_library",
        "//projects/aiservice/pkg/ginlib:go_default_library",
        "//projects/kubebrain/pkg/auditdb:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
